# robotarm-so101

./: .gitattributes  .gitignore  README.md  TRAINING.md  pyproject.toml  requirements.txt  run
config/: cameras.yaml  robot.yaml  teleop.yaml
data/: .gitkeep
docs/: SETUP.md
scripts/: calibrate.ps1  practice.ps1  record.ps1  record_sim.ps1  run_policy.ps1  so101.ps1  so101.sh  teleoperate.ps1  train.ps1
src/so101/: __init__.py  __main__.py  app.py  cameras.py  controller.py  desktop_control.py  gui.py  ik_reach.py  record.py  record_ui.py  robot.py  run_policy.py  train.py  vision_control.py  xbox_teleop.py
src/so101/sim/: __init__.py  keyboard_control.py  practice.py  sim_robot.py  so101.urdf  so101.xml
